<!--
   Copyright 2018 tarekmabdallah91@gmail.com

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
<resources>
    <string name="app_name">The Guardian</string>
    <string name="search_label">Search</string>
    <string name="sections_label">Sections</string>
    <string name="article_details_label">Details</string>
    <string name="error_label">Error:</string>
    <string name="main_label">Main</string>
    <string name="settings_label">Settings</string>
    <string name="world_news_label">World news</string>
    <string name="world_id" translatable="false">world</string>

    <string name="sections_list_label">Main section</string>
    <string name="sections_list_key" translatable="false">main_section</string>
    <string name="sections_list_default_value" translatable="false">@string/world_id</string>

    <string name="order_by_list_label">Order By</string>
    <string name="order_by_list_key" translatable="false">order_by</string>
    <string name="order_by_list_default_value" translatable="false">@string/newest_value</string>

    <string name="order_date_list_label">Order Date</string>
    <string name="order_date_list_key" translatable="false">order_date</string>
    <string name="order_date_list_default_value" translatable="false">@string/published_value</string>

    <string name="newest_label">Newest</string>
    <string name="oldest_label">Oldest</string>
    <string name="relevance_label">Relevance</string>
    <string name="newest_value" translatable="false">newest</string>
    <string name="oldest_value" translatable="false">oldest</string>
    <string name="relevance_value" translatable="false">relevance</string>

    <string name="published_label">Published</string>
    <string name="first_publication_label">First publication</string>
    <string name="newspaper_edition_label">Newspaper edition</string>
    <string name="last_modified_label">Last modified</string>
    <string name="published_value" translatable="false">published</string>
    <string name="first_publication_value" translatable="false">first-publication</string>
    <string name="newspaper_edition_value" translatable="false">newspaper-edition</string>
    <string name="last_modified_value" translatable="false">last-modified</string>

    <string name="throwable" translatable="false">throwable</string>
    <string name="required_msg">required !</string>
    <string name="special_chars_msg">Please, remove any special chars</string>
    <string name="password_requirements_msg">password must have English capital, small letters, special chars and numbers ,,,</string>
    <string name="password_length_msg">Password must be more than 6 letters</string>
    <string name="no_items_msg">Sorry, no Items for this page</string>
    <string name="no_browser_msg">Sorry, You don\'t have a browser app or any app can open this page</string>

    <string name="no_connection">Sorry no internet connection\nplease check your connection\nand try again later</string>
    <string name="no_news_found">Currently there are no stories for you.\nYou can always come later\nand check for all new stories.</string>
    <string name="news_label">News</string>
    <string name="countries_news_label">Countries news</string>
    <string name="from_date_label">From date:</string>
    <string name="to_date_label">To date:</string>
    <string name="clear_dates">Clear dates</string>
    <string name="removed_successfully_msg">Removed successfully</string>
    <string name="added_successfully_msg">Added successfully</string>
    <string name="not_valid_url_msg">Sorry can not open this link</string>
    <string name="favourite_list_label">Favourite articles</string>
    <string name="today_label">Today</string>
    <string name="loading_msg">loading....</string>
    <string name="empty_db_msg">Empty database !</string>
    <string name="about_me">About me</string>
    <string name="simple_view">Simple view</string>
    <string name="easy_view">Easy view</string>

</resources>
