<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2018 tarekmabdallah91@gmail.com

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/sections_list_label"
        android:defaultValue="@string/sections_list_default_value"
        android:key="@string/sections_list_key" />

    <ListPreference
        android:title="@string/order_by_list_label"
        android:entries="@array/order_by_list_labels"
        android:entryValues="@array/order_by_list_values"
        android:defaultValue="@string/order_by_list_default_value"
        android:key="@string/order_by_list_key" />

    <ListPreference
        android:title="@string/order_date_list_label"
        android:entries="@array/order_date_list_labels"
        android:entryValues="@array/order_date_list_values"
        android:defaultValue="@string/order_date_list_default_value"
        android:key="@string/order_date_list_key" />

</PreferenceScreen>