<!--
  ~
  ~ Copyright 2019 tarekmabdallah91@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.gmail.tarekmabdallah91.news.views.settings.DatesFragment">

    <TextView
        android:id="@+id/from_date_label"
        style="@style/text_view_with_spinner_layout_style"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space16"
        android:layout_margin="@dimen/space16"
        android:layout_alignParentTop="true"
        android:text="@string/from_date_label" />

    <TextView
        android:id="@+id/to_date_label"
        style="@style/text_view_with_spinner_layout_style"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/space16"
        android:layout_below="@id/from_date_label"
        android:text="@string/to_date_label" />

    <TextView
        android:id="@+id/clear_dates_btn"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:text="@string/clear_dates"
        android:layout_margin="@dimen/space16"
        android:layout_below="@id/to_date_label" />

</RelativeLayout>
